--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required (VERSION 3.10.1)
 set(CMAKE_VERBOSE_MAKEFILE 0)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_SUPPRESS_REGENERATION true)
-project(vk_project)
+#project(vk_project)
 # The version number.
 set(PROJECT_VERSION_MAJOR 1)
 set(PROJECT_VERSION_MINOR 0)
@@ -19,6 +19,17 @@ if( NOT DEFINED VK_USE_PLATFORM )
 		set( VK_USE_PLATFORM "XCB" )
 	endif()
 endif()
+
+#SET(export_args "VK_INSTANCE_LAYERS=VK_LAYER_LUNARG_standard_validation:VK_LAYER_LUNARG_api_dump:VK_LAYER_LUNARG_core_validation")
+#execute_process(COMMAND export VK_INSTANCE_LAYERS=VK_LAYER_LUNARG_standard_validation:VK_LAYER_LUNARG_api_dump:VK_LAYER_LUNARG_core_validation )
+#add_custom_command(TARGET main PRE_BUILD COMMAND export VK_INSTANCE_LAYERS=VK_LAYER_LUNARG_standard_validation:VK_LAYER_LUNARG_api_dump:VK_LAYER_LUNARG_core_validation)
+#set(ENV{VK_INSTANCE_LAYERS} VK_INSTANCE_LAYERS=VK_LAYER_LUNARG_standard_validation:VK_LAYER_LUNARG_api_dump:VK_LAYER_LUNARG_core_validation)
+
+execute_process (
+    COMMAND export "VK_INSTANCE_LAYERS=VK_LAYER_LUNARG_standard_validation:VK_LAYER_LUNARG_api_dump:VK_LAYER_LUNARG_core_validation"
+)
+
+message("Environment variable: $ENV{VK_INSTANCE_LAYERS}")
 
 if( VK_USE_PLATFORM STREQUAL "VK_USE_PLATFORM_WIN32_KHR" )
 	set( CMAKE_C_FLAGS_RELWITHDEBINFO    "${CMAKE_C_FLAGS_RELWITHDEBINFO} /MT" )
@@ -54,12 +65,7 @@ file(GLOB HEADER_FILES "include/*.h" "include/*.inl")
 
 add_executable(main ${MAIN_SOURCES})
 
-if (WIN32)
-    add_custom_command(TARGET main PRE_BUILD COMMAND SET VK_INSTANCE_LAYERS=VK_LAYER_LUNARG_standard_validation)
-endif (WIN32)
-if (UNIX)
-    add_custom_command(TARGET main PRE_BUILD COMMAND export VK_INSTANCE_LAYERS=VK_LAYER_LUNARG_standard_validation)
-endif (UNIX)
+
 
 if (WIN32)
     target_link_libraries(main PUBLIC )
