--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@ CMakeCache.txt
 CMakeFiles
 CMakeScripts
 Testing
-Makefile
 cmake_install.cmake
 install_manifest.txt
 compile_commands.json
@@ -13,3 +12,4 @@ vgcore.*
 .vscode
 lib
 VulkanTest
+glfw
